@@ -20,8 +20,8 @@
 #include "DataFormats/Common/interface/Handle.h"
 #include "DataFormats/Candidate/interface/CandidateFwd.h"
 #include "DataFormats/Candidate/interface/CandMatchMap.h"
-
-#include "PhysicsTools/Utilities/interface/deltaPhi.h"
+//#include "DataFormats/Math/interface/deltaPhi.h" // 31X+
+#include "PhysicsTools/Utilities/interface/deltaPhi.h" // 22X & 31X
 
 #include <memory>
 #include <cmath>
